$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-32 (opened October 24, 2009)

	* ordisurf: plotting main title was broken with NA handling in
	1.16-31 (r1049). Also increased grid density and adjusted pushing
	out limits of convex hull.

	* pcnm: new function for PCNM (Principal Coordinates of
	Neighbourhood Matrix) with option for row weighs allowing PCNM for
	cca. Based on Stéphane Dray's PCNM function in his (unreleased)
	SpacemakeR package. Imported with history from sedarVegan in
	http://sedar.r-forge.r-project.org/. 

	* decostand: implemented Marti Anderson's log scaling of type
	log(x, base = logbase) + 1 as a part of Feature Request #473. The
	coding follows closely Etienne Laliberte's suggestion, and also
	handles non-negative non-integer data. 

	* vegdist: C code for an alternative version of Gower Index that
	skips double zeros. No R level interface yet. If this function is
	to be used from vegdist.R, it should be added as item 14 in
	'method' list, and the R level preprocessing should be done
	similarly as for "gower" (method choice 6). This was implemented
	for inspecting the implementation of second part of Feature
	Request #473, but may be removed if that part of the request is
	not implemented.
	
Version 1.16-31 (closed October 24, 2009)

	* ordisurf: removes observation with NA in scores (as result of
	na.action) or in predicted variable.

	* specaccum: "accumulations" in one-site collections are handled
	with a message() instead of stop()ping with error. Per request of
	Roeland Kindt.

	* constrained ordination (cca, rda, capscale) could not handle all
	anova(.., by= "something") cases when the data were not defined by
	data=, but were in the working environment or given using
	with(). The attach'ed data frames that were later detach'ed won't
	work. This means some potentially unstabilizing changes in scope:
	please report all problems.

	* envfit: could drop data frame to a vector with na.action (broken
	in 1.16-28).